notq/static/style.css
html { background: #eee; padding: 1rem; font: 400 16px/1.4 ProximaNova,Helvetica,sans-serif; color: #242f33 }
body { max-width: 1024px; margin: 0 auto; background: white; font-family: Open Sans,Arial,sans-serif; }
img { max-width: 100%; }
h1 { color: #377ba8; margin: 1rem 0; }
a { color: #377ba8; text-decoration: none; }
hr { border: none; border-top: 1px solid lightgray; }
summary { list-style:none; }
summary.commentheader { background-color:#f0f0f0; }
summary.thiscommentheader { background-color:#f0f8f0; }
details { margin-bottom: 12px; }
details > p { margin-bottom: 2px; margin-top: 8px; }
nav { background: #3264c8; display: flex; align-items: center; padding: 0 0.5rem; }
nav h1 { flex: auto; margin: 0; color: white; }
nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
.logo { margin-left: 8px; margin-top: 10px; margin-bottom: 10px; }
nav ul li a, nav ul li span { padding: 3px; color: white; }
.navkarma { color: #EFCC7F; }
.content { padding: 0 1rem 1rem; }
.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; overflow: auto;}
.content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; font-size: medium; }
.post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
.post > header > .votes { margin-right: 18px; margin-top: 4px; align-self: center; text-align: center; }
.post > p { overflow: hidden; }
.vote { color: lightgray; cursor: pointer; }
.edit { align-self: center; }
.post > header > .middle { flex: auto; }
.post > header h1 { font-size: 1.5em; margin-bottom: 0; line-height: initial; }
.post .about { color: slategray; font-style: italic; }
.moderated { background-color: #fff0f0 }
.content:last-child { margin-bottom: 0; }
.content form { margin: 1em 0; display: flex; flex-direction: column; }
.content label { font-weight: bold; margin-bottom: 0.5em; }
.content input, .content textarea { margin-bottom: 1em; }
.content textarea { min-height: 12em; resize: vertical; }
.navlink { color: #aaa; margin-right: 20px; margin-top: 8px; margin-bottom: 8px; }
.inlineaction { color: gray; text-decoration: underline; text-decoration-style: dotted; cursor: pointer; }
.smallaction { color: gray; }
input.danger { color: #cc2f2e; }
input[type=submit] { align-self: start; min-width: 10em; }
.vdelim { margin-bottom: 1em; }

nav a.username { color: white }
a.username { color: #242f33; }
a.notify { color: #242f33; }
.notifymeta { color: lightgray; }
.post > header h1.bigusername { font-size: 3em; }

.spoiler { color: #eee; background-color: #eee }
.spoiler:hover { color: revert }

/* register page */
.registerhint { margin-top:0px; color:gray; }

/* rendered markdown specifics */
blockquote { color: #849922; margin-inline-start: unset; padding-left: 10px; margin-bottom: 2px; margin-top: 2px; }
pre { overflow: auto; }

/* mobile-friendly youtube embed container */
.youtube {
    aspect-ratio: 16/9;
    max-width: 100%
}
.embed-container { 
    position: relative; 
    padding-bottom: 56.25%;
    overflow: hidden;
    max-width: 100%;
    height: auto;
}
.embed-container iframe,
.embed-container object,
.embed-container embed { 
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* simple tables */
table { margin-top: 16px; width: 100% }
table, th, td {
  border: 1px solid gray;
  border-collapse: collapse;
  padding: 8px;
}
th {
  background-color: #f0f0f0
}
ul { margin: 0 }

/* top users */
.topusers { margin-top: 16px; width:100%; font-size:larger; }
.topusers, .topusers th, .topusers td {
  border: 1px solid white;
  border-collapse: collapse;
  padding: 8px;
  padding-left: 16px;
  padding-right: 16px;
}
.topusers th {
  background-color: #f0f0f0;
}
.topusers tr:nth-child(even) {
  background-color: #f0f0f0;
}

